# rs-docker-volumes2arrow-ipc

./: Cargo.toml  README.md  example.sh  rs-docker-volumes2arrow-ipc
src/: lib.rs  main.rs
