[package]
name = "rs-docker-volumes2arrow-ipc"
version = "0.1.0"
edition = "2024"

description = "Prints the volumes info as an ipc stream."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-docker-volumes2arrow-ipc"
homepage = "https://github.com/takanoriyanagitani/rs-docker-volumes2arrow-ipc"
documentation = "https://docs.rs/rs-docker-volumes2arrow-ipc/latest"
keywords = ["arrow", "ipc", "stream", "docker", "volumes"]
categories = ["command-line-utilities"]

exclude = [
	"rs-docker-volumes2arrow-ipc",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies.bollard]
version = "0"
default-features = false
features = [
	"http",
	"pipe",
]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]

[dependencies.tokio]
version = "1"
default-features = false
features = [
	"macros",
	"rt-multi-thread",
]
